plugins {
    id 'application'
    id 'com.gradleup.shadow' version '8.3.6'
}

group 'com.github.ucov'
version '1.0-SNAPSHOT'


compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = '23'
    targetCompatibility = '23'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = '23'
    targetCompatibility = '23'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "IntelliJ"
        url 'https://packages.jetbrains.team/maven/p/ij/intellij-dependencies'
    }
    maven {
        name = "Roseau"
        url = "https://maven.pkg.github.com/alien-tools/roseau"
        credentials {
            username = project.findProperty("gpr.user")
            password = project.findProperty("gpr.key")
        }
    }
}

dependencies {
    implementation 'fr.inria.gforge.spoon:spoon-core:10.4.2-beta-5'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'com.github.maracas:roseau:0.0.2-SNAPSHOT'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.github.ucov.Main',
                'Multi-Release': 'true'
    }
}

application {
    mainClass = 'com.github.ucov.Main'
}

description = 'Main distribution.'

shadowJar {
    archiveBaseName.set('ucov')
    archiveClassifier.set('')
    archiveVersion.set('')
    mergeServiceFiles()
}

distributions {
    shadow {
        distributionBaseName = 'ucov'
    }
}

apply plugin: 'java'
apply plugin: 'idea'

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

run {
    jvmArgs = [
            "-XX:InitialHeapSize=2G",
            "-XX:MaxHeapSize=2G",
            "--enable-preview"
    ]
}

runShadow {
    jvmArgs = [
            "-XX:InitialHeapSize=2G",
            "-XX:MaxHeapSize=2G"
    ]
}
